# fastAPI-MongoDB

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  debug.http  docker-compose.yaml  example.env  pyproject.toml  requirements.txt  start_project.sh  stop_project.sh
database_service/: Dockerfile  main.py  pyproject.toml  requirements.txt
database_service/api/: endpoints.py  schemas.py  services.py
database_service/core/: example.env  main.py  settings.py  settings.yaml
