[tool.poetry]
name = "fastapi_test_task"
version = "0.1.0"
description = "Test task"
authors = ["barannikovMU <barannikov.mu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"
pymongo = "^4.0.1"
fastapi = "^0.71.0"
uvicorn = "^0.17.0"
python-multipart = "^0.0.5"
python-dotenv = "^0.19.2"


[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
